--- a/recipes/grilled-asparagus.html
+++ b/recipes/grilled-asparagus.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Grilled Asparagus</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9199165.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
+        alt="grilled asparagus">
+    <h2>Description</h2>
+    <p>Grilled asparagus is simple to make, but it lets you enjoy the natural flavor of your veggies. Fresh asparagus
+        spears are coated with a bit of oil, salt, and pepper and cooked quickly over high heat on the grill. That's it!
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Asparagus</li>
+        <li>Oil</li>
+        <li>Salt</li>
+        <li>pepper</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Preheat an outdoor grill to high heat and lightly oil the grate</li>
+        <li>Lightly coat the asparagus with olive oil and season with salt and pepper</li>
+        <li>Cook asparagus on the preheated grill, turning often until lightly charred and fork tender (about 3 to 5 minutes)</li>
+    </ol>
 </body>
+
 </html>
