--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes</title>
 </head>
 <body>
     <h1>Recipes</h1>
-    <a href="recipes/grilled-asparagus.html">Grilled Asparagus</a>
+    <ul>
+        <li><a href="recipes/grilled-asparagus.html">Grilled Asparagus</a></li>
+        <li><a href="recipes/italian-marinade-chicken.html">Italian Chicken Marinade</a></li>
+        <li><a href="recipes/best-hamburger-ever.html">Best Hamburger Ever</a></li>
+    </ul>
 </body>
 </html>
